--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,37 @@
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1.5;
+}
+
+/*
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+
+  display: flex;
+  justify-content: center;
+  border: 1px solid red;
+  max-width: 700px;
+  margin-left: 50px;
+  /*font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  margin: 50px;
+  margin: 5px;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+}
+h1{
+  margin-top: 10px;
 }
 
 a {
@@ -26,8 +46,10 @@ a:hover {
 body {
   display: flex;
   place-items: center;
-  min-width: 800px;
+  max-width: 800px;
   min-height: 100vh;
+  justify-content: center;
+  border: 1px solid red;
 }
 
 h1 {
@@ -65,3 +87,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+  
+}*/
