add experience button

--- a/src/stylefiles/education.module.css
+++ b/src/stylefiles/education.module.css
@@ -8,3 +8,9 @@
 input{
     max-width: 250px;
 }
+.education{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    border: 1px solid red;
+}
