--- a/src/stylefiles/generalinfo.css
+++ b/src/stylefiles/generalinfo.css
@@ -63,6 +63,9 @@ button{
     padding: 10px;
 
 }
+.addeducation{
+    border: 4px solid black;
+}
 .info > div{
     font-size: 1rem;
     width: 320px;
